chore(config): configure typescript for next.js with path aliases

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,9 @@
         "name": "next"
       }
     ],
-    "paths": {
-      "@/*": ["./*"]
-    }
+   "paths": {
+  "@/*": ["./src/*"]
+}
   },
   "include": [
     "next-env.d.ts",
